# cpp-tasks

./: .gitignore  CMakeLists.txt
include/algorithms/: Sorting.h
include/data_structures/: DoublyNode.h  Node.h
include/data_structures/basics/: CircularLinkedList.h  DoublyLinkedList.h  DynamicArray.h  SinglyLinkedList.h
include/data_structures/basics/list/: CircularLinkedList.h  DoublyLinkedList.h  DynamicArray.h  SinglyLinkedList.h
include/data_structures/basics/stack/: ArrayStack.h  LinkedListStack.h
src/: main.cpp
src/algorithms/: Sorting.tpp
src/data_structures/basics/: CircularLinkedList.tpp  DoublyLinkedList.tpp  DynamicArray.cpp  SinglyLinkedList.tpp
src/data_structures/basics/list/: CircularLinkedList.tpp  DoublyLinkedList.tpp  DynamicArray.cpp  DynamicArray.tpp  SinglyLinkedList.tpp
src/data_structures/basics/stack/: ArrayStack.tpp  LinkedListStack.tpp
tests/algorithms/: SortingTest.cpp
tests/data_structures/basics/: CircularLinkedListTest.cpp  DoublyLinkedListTest.cpp  DynamicArrayTest.cpp  SinglyLinkedListTest.cpp
tests/data_structures/basics/list/: CircularLinkedListTest.cpp  DoublyLinkedListTest.cpp  DynamicArrayTest.cpp  SinglyLinkedListTest.cpp
tests/data_structures/basics/stack/: ArrayStackTest.cpp  LinkedListStackTest.cpp
